# CricketAnalytics

./: .gitignore  LICENSE  README.md  SDP.ipynb  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: scraper.yaml  train.yaml
data/: README.md
src/cricket_analytics/: __init__.py  cli.py
src/cricket_analytics/scraper/: __init__.py  espncricinfo.py  schemas.py
tests/: conftest.py  test_scaffold.py  test_scraper.py
