[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cricket-analytics"
version = "0.1.0"
description = "Predict the effectiveness of a cricket shot from ball-by-ball data"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Manauv Tandon" }]

dependencies = [
    "pandas>=2.0,<3.0",
    "numpy>=1.24,<2.0",
    "scipy>=1.10,<2.0",
    "openpyxl>=3.1,<4.0",
    "scikit-learn>=1.4,<2.0",
    "xgboost>=2.0,<3.0",
    "catboost>=1.2,<2.0",
    "lightgbm>=4.0,<5.0",
    "tensorflow>=2.16,<3.0",
    "pydantic>=2.0,<3.0",
    "requests>=2.31,<3.0",
    "beautifulsoup4>=4.12,<5.0",
    "lxml>=5.0,<6.0",
    "typer>=0.12,<1.0",
    "rich>=13.0,<14.0",
    "pyyaml>=6.0,<7.0",
    "matplotlib>=3.7,<4.0",
    "seaborn>=0.12,<1.0",
    "category_encoders>=2.6,<3.0",
    "pyarrow>=15.0,<20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=5.0,<6.0",
    "ruff>=0.4,<1.0",
    "mypy>=1.10,<2.0",
    "pandas-stubs>=2.0",
]
notebook = [
    "jupyterlab>=4.0,<5.0",
    "ipykernel>=6.25,<7.0",
]

[project.scripts]
cricket-analytics = "cricket_analytics.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/cricket_analytics"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
